crafting package temporary naive migration to 1.19.2