@@ -5,7 +5,6 @@ import net.minecraft.world.level.Level;
 
 import javax.annotation.Nullable;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Author: MrCrayfish
@@ -15,7 +14,7 @@ public class WorkstationRecipes
     @Nullable
     public static WorkstationRecipe getRecipe(EntityType<?> entityType, Level world)
     {
-        List<WorkstationRecipe> recipes = world.getRecipeManager().getRecipes().stream().filter(recipe -> recipe.getType() == ModRecipeTypes.WORKSTATION).map(recipe -> (WorkstationRecipe) recipe).collect(Collectors.toList());
+        List<WorkstationRecipe> recipes = world.getRecipeManager().getRecipes().stream().filter(recipe -> recipe.getType() == ModRecipeTypes.WORKSTATION.get()).map(recipe -> (WorkstationRecipe) recipe).toList();
         return recipes.stream().filter(recipe -> recipe.getVehicle() == entityType).findFirst().orElse(null);
     }
 }
